#1343: fixed getVersions