@@ -2,6 +2,7 @@ package com.devonfw.tools.ide.integrationtest;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import com.devonfw.tools.ide.url.model.folder.UrlRepository;
@@ -15,7 +16,12 @@ import com.devonfw.tools.ide.url.updater.UrlUpdater;
  */
 public class UrlUpdaterMockSingle extends UrlUpdaterMock {
 
-  private static final Set<String> versions = new HashSet<>(Arrays.asList("1.0"));
+  private static final Set<String> versions = new HashSet<>(List.of("1.0"));
+
+  @Override
+  protected Set<String> getVersions() {
+    return versions;
+  }
 
   @Override
   protected void addVersion(UrlVersion urlVersion) {
